--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
     "name": "react-croppa",
     "version": "1.0.0",
     "description": "Simple react component for cropping images.",
-    "main": "./src/index.js",
-    "types": "./src/index.d.ts",
+    "main": "./dist/index.js",
+    "types": "./src/@types/index.d.ts",
     "scripts": {
         "test": "jest --config jestconfig.json",
-        "build": "tsc",
+        "build": "rollup -c",
+        "start": "rollup -c -w",
+        "bundle": "rollup -c rollup-iife.config.js",
         "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
         "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
         "prepare": "npm run build",
@@ -33,7 +35,7 @@
         "type": "git",
         "url": "git+https://github.com/lykdatApps/react-croppa.git"
     },
-    "dependencies": {
+    "peerDependencies": {
         "body-scroll-lock": "^4.0.0-beta.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
@@ -48,8 +50,8 @@
         "eslint-config-prettier": "^8.5.0",
         "jest": "^27.5.1",
         "prettier": "^2.5.1",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0",
+        "rollup": "^2.69.0",
+        "rollup-plugin-typescript2": "^0.31.2",
         "ts-jest": "^27.1.3",
         "typescript": "^4.6.2"
     },
