--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     },
     "peerDependencies": {
         "body-scroll-lock": "^4.0.0-beta.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react": "^17.0.2"
     },
     "devDependencies": {
         "@types/body-scroll-lock": "^3.1.0",
