--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
         "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
         "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
         "prepare": "npm run build",
-        "prepublishOnly": "npm test && npm run lint",
-        "preversion": "npm run lint",
+        "prepublishOnly": "npm test",
         "version": "npm run format && git add -A src",
         "postversion": "git push && git push --tags"
     },
@@ -55,6 +54,6 @@
         "typescript": "^4.6.2"
     },
     "files": [
-        "dist/**/*"
+        "dist"
     ]
 }
