--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
     "compilerOptions": {
         "target": "es6",
         "lib": ["dom", "dom.iterable", "esnext"],
-        "allowJs": true,
         "skipLibCheck": true,
         "strict": true,
         "forceConsistentCasingInFileNames": true,
@@ -13,7 +12,8 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "jsx": "react",
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "declaration": true
     },
     "include": ["./src/**/*.ts", "./src/**/*.tsx"],
     "exclude": [
